z-index fix for .row-menu

--- a/trunk/www/topic/topic.less
+++ b/trunk/www/topic/topic.less
@@ -386,6 +386,10 @@ div.kbs.current .mark {
   .transition(all);
 }
 
+.data-list li .combo-menu li {
+  list-style: none;
+}
+
 .kbs.row-hover .combo-menu {
   visibility: visible;
 }
@@ -408,6 +412,10 @@ div.kbs.current .mark {
 ul.combo-menu li,
 .data-table tbody tr ul.combo-menu li {
   padding: 0; 
+}
+
+.combo-menu .row-menu {
+  z-index: 2;
 }
 
 .combo-menu .more-action {
